Web UI facelift + camera source selection (index/RTSP), alarm toggle, conf slider, FPS display, health endpoint, model warm-up, settings persistence, fixed history mapping, camera startup reliability

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ runs/
 # Temporary files
 *.tmp
 *.temp
+
+# Local database and generated images
+apd_violations.db
+violation_images/
+
+# Local settings
+settings.json
